--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --port=3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "panda codegen"
   },
   "dependencies": {
     "@types/node": "20.3.2",
@@ -18,5 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@pandacss/dev": "^0.5.0"
   }
 }
