Pull out AppShell componentry

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port=3001 --turbo",
+    "dev": "next dev --port=3001",
     "build": "next build",
     "format": "prettier --write .",
     "lint": "next lint",
