Add dev:force script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port=3001",
+    "dev:force": "rm -rf .next && pnpm dev",
     "build": "next build",
     "format": "prettier --write .",
     "lint": "next lint",
