--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 HASH_NODE_API_HOST='https://api.hashnode.com'
 HASH_NODE_HANDLE='jamesandersonwalsh'
+HASH_NODE_BLOG_HOST='https://jameswalsh.hashnode.dev'
