--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-highlight": "^6.0.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
