--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "highlight.js": "^11.8.0",
     "next": "13.4.9",
     "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
