--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "next build",
     "format": "prettier --write .",
     "lint": "next lint",
-    "prepare": "panda codegen",
+    "prepare": "panda codegen && husky install",
     "start": "next start"
   },
   "dependencies": {
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@pandacss/dev": "^0.5.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "husky": "^8.0.0"
   }
 }
