Run all checks on PR only

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: 'Run Build'
+      - name: Run Next Build
         id: run-build
         run: pnpm build
