--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,9 @@
 /.next/
 /out/
 
-# production
+# build directories
 /build
+/styled-system
 
 # misc
 .DS_Store
@@ -33,3 +34,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# contentlayer
+.contentlayer
