--- a/package.json
+++ b/package.json
@@ -22,20 +22,19 @@
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.7",
-    "highlight.js": "^11.8.0",
-    "next": "13.4.9",
-    "next-mdx-remote": "^4.4.1",
+    "next": "13.4.12",
+    "next-contentlayer": "^0.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rehype-highlight": "^6.0.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@pandacss/dev": "^0.5.0",
-    "prettier": "^2.8.8",
-    "husky": "^8.0.0"
+    "@pandacss/dev": "0.9.0",
+    "husky": "^8.0.0",
+    "prettier": "^2.8.8"
   }
 }
