--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.7",
+    "highlight.js": "^11.8.0",
     "next": "13.4.12",
     "next-contentlayer": "^0.3.4",
     "react": "18.2.0",
