--- a/package.json
+++ b/package.json
@@ -26,16 +26,21 @@
     "date-fns": "^2.30.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.7",
-    "highlight.js": "^11.8.0",
     "next": "13.4.12",
     "next-contentlayer": "^0.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "shiki": "^0.14.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@pandacss/dev": "0.9.0",
     "husky": "^8.0.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "rehype": "^12.0.1",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.10.0",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1"
   }
 }
