Support calculating time to read

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "paths": {
       "@/*": ["./*"],
       "@ui/*": ["./components/*"],
+      "@helpers/*": ["./helpers/*"],
       "contentlayer/generated": ["./.contentlayer/generated"]
     }
   },
