--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "devDependencies": {
     "@pandacss/dev": "0.9.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-import": "^2.28.0",
     "husky": "^8.0.3",
     "prettier": "^3.0.1",
