Run contentlayer build before linting

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,6 +36,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+      
+      - name: Contentlayer build
+        run: pnpm contentlayer build
 
       - name: Run ESLint
         id: run-lint
