--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -44,6 +44,6 @@ jobs:
         id: run-lint
         run: pnpm lint
 
-      - name: Run Prettier
+      - name: Run Prettier Check
         id: run-format-check
         run: pnpm format:check
