--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=18.16"
+    "node": ">=v18.17.1"
   },
-  "packageManager": "pnpm@8.6.5",
+  "packageManager": "pnpm@8.6.12",
   "scripts": {
     "dev": "next dev --port=3001",
     "dev:force": "rm -rf .next && pnpm dev",
