--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-contentlayer": "^0.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.5",
     "shiki": "^0.14.3",
     "typescript": "5.1.6"
   },
