--- a/.github/workflows/publish-dry.yml
+++ b/.github/workflows/publish-dry.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           devto_key: ${{ secrets.DEVTO_TOKEN }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          files: 'posts/**/*.md'
+          files: 'posts/**/*.mdx'
           conventional_commits: false
           dry_run: true
