--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=v18.17.1"
+    "node": ">=v18.18.2"
   },
   "packageManager": "pnpm@8.6.12",
   "scripts": {
@@ -28,42 +28,34 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@types/node": "20.9.3",
-    "@types/react": "18.2.38",
-    "@types/react-dom": "18.2.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
-    "eslint": "8.51.0",
-    "eslint-config-next": "14.0.3",
     "geist": "^1.0.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
-    "next-contentlayer": "^0.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-intersection-observer": "^9.5.3",
-    "sharp": "^0.32.6",
-    "shiki": "^0.14.5",
-    "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "react-intersection-observer": "^9.5.3"
   },
   "devDependencies": {
+    "@types/node": "20.9.3",
+    "@types/react": "18.2.38",
+    "@types/react-dom": "18.2.16",
     "@typescript-eslint/parser": "^6.9.0",
     "autoprefixer": "^10.4.16",
+    "eslint": "8.51.0",
+    "eslint-config-next": "14.0.3",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "husky": "^8.0.3",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "rehype": "^13.0.1",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-pretty-code": "^0.10.2",
-    "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwind-merge": "^2.0.0",
+    "typescript": "5.2.2"
   }
 }
