--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "dependencies": {
     "@highlight-run/next": "^7.2.2",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -39,6 +42,7 @@
     "react-intersection-observer": "^9.5.3"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.10",
     "@types/node": "20.9.3",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.16",
@@ -53,9 +57,9 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "remark-gfm": "^3.0.1",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
-    "tailwind-merge": "^2.0.0",
     "typescript": "5.2.2"
   }
 }
