--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@highlight-run/next": "^7.2.2",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.3",
@@ -38,8 +37,7 @@
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-intersection-observer": "^9.5.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/mdx": "^2.0.10",
