--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "geist": "^1.0.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "react": "18.2.0",
