--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
