--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@highlight-run/next": "^7.2.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -28,9 +27,6 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@types/node": "20.9.3",
-    "@types/react": "18.2.38",
-    "@types/react-dom": "18.2.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
@@ -43,16 +39,17 @@
     "next-contentlayer": "^0.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-intersection-observer": "^9.5.3",
-    "sharp": "^0.32.6",
     "shiki": "^0.14.5",
-    "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@types/node": "20.9.3",
+    "@types/react": "18.2.38",
+    "@types/react-dom": "18.2.17",
     "@typescript-eslint/parser": "^6.9.0",
     "autoprefixer": "^10.4.16",
+    "eslint": "8.51.0",
+    "eslint-config-next": "14.0.3",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "husky": "^8.0.3",
@@ -64,6 +61,8 @@
     "rehype-pretty-code": "^0.10.2",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.2.2"
   }
 }
