Add support for RSS feed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,4 +14,7 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
+  "[xml]": {
+    "editor.defaultFormatter": "redhat.vscode-xml"
+  },
 }
