--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next-contentlayer": "^0.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rss": "^1.2.2",
     "shiki": "^0.14.5",
     "tailwind-merge": "^2.0.0"
   },
@@ -47,6 +48,7 @@
     "@types/node": "20.9.3",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.17",
+    "@types/rss": "^0.0.32",
     "@typescript-eslint/parser": "^6.9.0",
     "autoprefixer": "^10.4.16",
     "eslint": "8.51.0",
