Do not install deps during cypress run

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -34,9 +34,10 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm ci
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
+          install: false
           start: pnpm dev
