Cache contentlayer and next dev server build

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -21,14 +21,19 @@ jobs:
           echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
       - uses: actions/cache@v3
-        name: Setup pnpm cache
+        name: Setup pnpm, cypress, contentlayer, & next.js cache
         with:
           path: |
             ~/.cache/Cypress
+            .next
+            .contentlayer
             ${{ env.STORE_PATH }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
+
+      - name: Contentlayer build
+        run: pnpm contentlayer build
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
