--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -35,7 +35,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm i --frozen-lockfile
 
       - name: Contentlayer build
         run: pnpm contentlayer build
