--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -44,3 +44,9 @@ jobs:
 
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+
+      - id: set-url
+        name: Set Preview URL
+        run: echo "url=$(tail -1 deploy.log)">> $GITHUB_OUTPUT
+
+      - run: echo "${{ steps.set-url.outputs.url }}"
