--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,11 @@ on:
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
+
+    environment:
+      name: production
+      url: ${{ steps.set-url.outputs.url }}
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -43,7 +48,7 @@ jobs:
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }} | tee deploy.log
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}  | tee deploy.log
 
       - id: set-url
         name: Set Deployment URL
