--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -9,6 +9,11 @@ on:
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
+
+    environment:
+      name: preview
+      url: ${{ steps.set-url.outputs.url }}
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
