--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -3,9 +3,14 @@ env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
+  workflow_run:
+    workflows: [E2E, Build]
+    types:
+      - completed
   push:
     branches-ignore:
       - main
+
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
