--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -4,9 +4,8 @@ env:
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
   workflow_run:
-    workflows: [E2E, Build]
-    types:
-      - completed
+    workflows: [E2E]
+    types: [completed]
   push:
     branches-ignore:
       - main
@@ -14,6 +13,7 @@ on:
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     environment:
       name: Preview
