Test out disabling push trigger

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -6,9 +6,9 @@ on:
   workflow_run:
     workflows: [E2E]
     types: [completed]
-  push:
-    branches-ignore:
-      - main
+  # push:
+  #   branches-ignore:
+  #     - main
 
 jobs:
   Deploy-Preview:
