--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,17 +1,22 @@
 name: Vercel Preview Deployment
+
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+
 on:
   workflow_run:
-    workflows: [E2E]
-    types: [completed]
-    branches-ignore: [main]
+    workflows:
+      - E2E
+    types:
+      - completed
+    branches-ignore:
+      - main
 
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     environment:
       name: Preview
