--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -5,18 +5,12 @@ env:
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
 on:
-  workflow_run:
-    workflows:
-      - E2E
-    types:
-      - completed
-    branches-ignore:
-      - main
+  - pull_request
 
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ !github.event.pull_request.draft }}
 
     environment:
       name: Preview
