--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@highlight-run/next": "^7.2.5",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
