--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -1,4 +1,4 @@
-name: E2E
+name: E2E Tests
 
 on:
   - pull_request
@@ -7,11 +7,12 @@ jobs:
   cypress-run:
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - uses: pnpm/action-setup@v2
-        name: Install pnpm
         with:
           version: 8
 
