--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
   },
   "packageManager": "pnpm@8.6.12",
   "scripts": {
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
     "dev": "next dev --port=3001",
     "dev:force": "rm -rf .next && pnpm dev",
     "build": "next build",
@@ -18,6 +16,10 @@
     "lint:fix": "pnpm lint -- --fix",
     "prepare": "husky install",
     "start": "next start",
+    "test:unit": "vitest",
+    "test:unit:ci": "vitest --run",
+    "test:e2e:open": "cypress open",
+    "test:e2e:run": "cypress run",
     "typecheck": "tsc --pretty"
   },
   "dependencies": {
@@ -60,6 +62,7 @@
     "eslint-config-next": "14.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
+    "happy-dom": "^13.3.8",
     "husky": "^8.0.3",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
@@ -71,6 +74,7 @@
     "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vitest": "^1.2.2"
   }
 }
