--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": ">=v18.17.1"
   },
+  "type": "module",
   "packageManager": "pnpm@8.6.12",
   "scripts": {
     "dev": "next dev --port=3001",
@@ -18,8 +19,8 @@
     "start": "next start",
     "test:unit": "vitest",
     "test:unit:ci": "vitest --run",
-    "test:e2e:open": "cypress open",
-    "test:e2e:run": "cypress run",
+    "test:e2e:open": "playwright test --headed",
+    "test:e2e:run": "playwright test",
     "typecheck": "tsc --pretty"
   },
   "dependencies": {
@@ -51,13 +52,13 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.41.2",
     "@types/node": "20.10.7",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.17",
     "@types/rss": "^0.0.32",
     "@typescript-eslint/parser": "^6.14.0",
     "autoprefixer": "^10.4.17",
-    "cypress": "^13.6.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
