Begin ejecting from contentlayer

--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "@vercel/analytics": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "contentlayer": "^0.3.4",
     "date-fns": "^3.3.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
+    "front-matter": "^4.0.2",
     "geist": "^1.2.0",
     "lucide-react": "^0.298.0",
     "next": "14.0.3",
-    "next-contentlayer": "^0.3.4",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rss": "^1.2.2",
