--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,36 +8,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
+      - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v2
         with:
           version: 8
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - uses: actions/cache@v3
+      - uses: actions/setup-node@v4
         with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          node-version: 18
+          cache: 'pnpm'
+      - run: pnpm i --frozen-lockfile
 
-      - name: Install dependencies
-        run: pnpm i --frozen-lockfile
-
-      - name: Contentlayer build
-        run: pnpm contentlayer build
-
-      - name: Run ESLint
-        id: run-lint
-        run: pnpm lint
-
-      - name: Run Prettier Check
-        id: run-format-check
-        run: pnpm format:check
+      - run: pnpm lint
+      - run: pnpm format:check
