--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# contentlayer
-.contentlayer
-
+# e2e testing
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
