--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "engines": {
     "node": ">=v18.17.1"
   },
+  "type": "module",
   "packageManager": "pnpm@8.6.12",
   "scripts": {
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
     "dev": "next dev --port=3001",
     "dev:force": "rm -rf .next && pnpm dev",
     "build": "next build",
@@ -17,7 +16,12 @@
     "lint": "next lint",
     "lint:fix": "pnpm lint -- --fix",
     "prepare": "husky install",
+    "preview": "pnpm build && pnpm start",
     "start": "next start",
+    "test:unit": "vitest",
+    "test:unit:ci": "vitest --run",
+    "test:e2e:open": "playwright test --headed",
+    "test:e2e:run": "playwright test",
     "typecheck": "tsc --pretty"
   },
   "dependencies": {
@@ -34,14 +38,12 @@
     "@vercel/analytics": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "contentlayer": "^0.3.4",
     "date-fns": "^3.3.1",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
+    "front-matter": "^4.0.2",
     "geist": "^1.2.0",
     "lucide-react": "^0.298.0",
     "next": "14.0.3",
-    "next-contentlayer": "^0.3.4",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rss": "^1.2.2",
@@ -49,17 +51,18 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.41.2",
     "@types/node": "20.10.7",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.17",
     "@types/rss": "^0.0.32",
     "@typescript-eslint/parser": "^6.14.0",
     "autoprefixer": "^10.4.17",
-    "cypress": "^13.6.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
+    "happy-dom": "^13.3.8",
     "husky": "^8.0.3",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
@@ -71,6 +74,8 @@
     "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vite-tsconfig-paths": "^4.3.1",
+    "vitest": "^1.2.2"
   }
 }
