Instantiate drizzle-kit with turso drivers

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "type": "module",
   "packageManager": "pnpm@8.6.12",
   "scripts": {
+    "db:gen:migrations": "dotenv -c -- drizzle-kit generate:sqlite",
+    "db:migrate": "dotenv -c -- tsx ./db/migrate.ts",
+    "db:push": "dotenv -c -- drizzle-kit push:sqlite",
+    "db:studio": "drizzle-kit studio",
     "dev": "next dev --port=3001",
     "dev:force": "rm -rf .next && pnpm dev",
     "build": "next build",
@@ -17,6 +21,8 @@
     "lint:fix": "pnpm lint -- --fix",
     "prepare": "husky install",
     "preview": "pnpm build && pnpm start",
+    "precommit": "pnpm typecheck && pnpm lint",
+    "prepush": "pnpm db:gen:migrations && pnpm build",
     "start": "next start",
     "test:unit": "vitest",
     "test:unit:ci": "vitest --run",
@@ -26,6 +32,7 @@
   },
   "dependencies": {
     "@highlight-run/next": "^7.2.5",
+    "@libsql/client": "^0.4.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -39,9 +46,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.3.1",
+    "drizzle-orm": "^0.29.3",
     "front-matter": "^4.0.2",
     "geist": "^1.2.0",
     "lucide-react": "^0.298.0",
+    "nanoid": "^5.0.5",
     "next": "14.0.3",
     "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
@@ -58,6 +67,8 @@
     "@types/rss": "^0.0.32",
     "@typescript-eslint/parser": "^6.14.0",
     "autoprefixer": "^10.4.17",
+    "dotenv-cli": "^7.3.0",
+    "drizzle-kit": "^0.20.14",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -74,6 +85,7 @@
     "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.7.0",
     "typescript": "5.3.3",
     "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^1.2.2"
