--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,24 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# NPM
 /node_modules
-/.pnp
-.pnp.js
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # testing
 /coverage
 
-# next.js
+# Build & Cache Directories
 /.next/
 /out/
-
-# build directories
 /build
 
 # misc
 .DS_Store
 *.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
+# local env
 .env*.local
+sqlite.db
 
 # vercel
 .vercel
