Add signup logic to lib/newsletter with dependency stubs

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react-dom": "18.2.0",
     "rss": "^1.2.2",
     "shiki": "^0.14.7",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@playwright/test": "^1.41.2",
