--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev": "next dev --port=3001",
     "dev:force": "rm -rf .next && pnpm dev",
     "build": "next build",
+    "build:analyze": "ANALYZE=true pnpm build",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "next lint",
@@ -33,6 +34,7 @@
   "dependencies": {
     "@highlight-run/next": "^7.2.5",
     "@libsql/client": "^0.4.3",
+    "@next/bundle-analyzer": "^14.1.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
