--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next": "14.1.1",
     "next-mdx-remote": "^4.4.1",
     "posthog-js": "^1.138.1",
+    "posthog-node": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rss": "^1.2.2",
