--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "typecheck": "tsc --pretty"
   },
   "dependencies": {
-    "@highlight-run/next": "^7.2.5",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -36,7 +35,6 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@vercel/analytics": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.3.1",
@@ -45,6 +43,8 @@
     "lucide-react": "^0.298.0",
     "next": "14.1.1",
     "next-mdx-remote": "^4.4.1",
+    "posthog-js": "^1.138.1",
+    "posthog-node": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rss": "^1.2.2",
