--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "preview": "pnpm build && pnpm start",
     "start": "next start",
     "test:unit": "vitest",
-    "test:unit:ci": "vitest --run",
+    "test:unit:ci": "vitest --run --coverage",
     "test:e2e:open": "playwright test --headed",
     "test:e2e:run": "playwright test",
     "typecheck": "tsc --pretty"
@@ -62,6 +62,7 @@
     "@types/rss": "^0.0.32",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "4.3.1",
+    "@vitest/coverage-istanbul": "2.1.1",
     "autoprefixer": "^10.4.17",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
@@ -81,6 +82,6 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.2.2"
+    "vitest": "^2.1.1"
   }
 }
