Add coverage report to test gh action

--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -18,3 +18,4 @@ jobs:
           cache: 'pnpm'
       - run: pnpm i --frozen-lockfile
       - run: pnpm test:unit:ci
+      - uses: davelosert/vitest-coverage-report-action@v2
