--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "preview": "pnpm build && pnpm start",
     "start": "next start",
     "test:unit": "vitest",
-    "test:unit:ci": "vitest --run",
+    "test:unit:ci": "vitest --run --coverage",
     "test:e2e:open": "playwright test --headed",
     "test:e2e:run": "playwright test",
     "typecheck": "tsc --pretty"
@@ -62,6 +62,7 @@
     "@types/rss": "^0.0.32",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "4.3.1",
+    "@vitest/coverage-istanbul": "2.1.1",
     "autoprefixer": "^10.4.20",
     "eslint": "8.57.1",
     "eslint-config-next": "14.1.0",
