--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prepare": "husky install",
     "preview": "pnpm build && pnpm start",
     "start": "next start",
+    "spell": "cspell",
     "test:unit": "vitest",
     "test:unit:ci": "vitest --run --coverage",
     "test:e2e:open": "playwright test --headed",
@@ -64,6 +65,7 @@
     "@vitejs/plugin-react": "4.3.1",
     "@vitest/coverage-istanbul": "2.1.1",
     "autoprefixer": "^10.4.20",
+    "cspell": "8.15.1",
     "eslint": "8.57.1",
     "eslint-config-next": "14.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
